// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reset password container tests renders container consistently 1`] = `
<div
  className="Signup"
>
  <ResetPassword
    disabled={true}
    errorMsg={null}
    isDisplayed={false}
    loading={false}
    message="success"
    onInputChange={[Function]}
    onSubmit={[Function]}
    showError={false}
  />
</div>
`;

exports[`Reset password container tests renders container correctly with fetch error 1`] = `
<div
  className="Signup"
>
  <ResetPassword
    disabled={true}
    errorMsg={null}
    isDisplayed={true}
    loading={false}
    message="success"
    onInputChange={[Function]}
    onSubmit={[Function]}
    showError={true}
  />
</div>
`;
